@@ -34,7 +34,8 @@ throws IOException
 }
 
 ARecord(Name _name, short _dclass, int _ttl, int length,
-	DataByteInputStream in, Compression c) throws IOException
+	DataByteInputStream in)
+throws IOException
 {
 	super(_name, Type.A, _dclass, _ttl);
 
