@@ -30,9 +30,9 @@ throws IOException
 }
 
 DNAMERecord(Name _name, short _dclass, int _ttl, int length,
-	    DataByteInputStream in, Compression c) throws IOException
+	    DataByteInputStream in) throws IOException
 {
-	super(_name, Type.DNAME, _dclass, _ttl, length, in, c);
+	super(_name, Type.DNAME, _dclass, _ttl, length, in);
 }
 
 DNAMERecord(Name _name, short _dclass, int _ttl, MyStringTokenizer st,
