@@ -30,13 +30,13 @@ NS_CNAME_PTRRecord(Name _name, short _type, short _dclass, int _ttl,
 
 protected
 NS_CNAME_PTRRecord(Name _name, short _type, short _dclass, int _ttl,
-		   int length, DataByteInputStream in, Compression c)
+		   int length, DataByteInputStream in)
 throws IOException
 {
 	super(_name, _type, _dclass, _ttl);
 	if (in == null)
 		return;
-	target = new Name(in, c);
+	target = new Name(in);
 }
 
 protected
