@@ -31,9 +31,10 @@ throws IOException
 }
 
 PTRRecord(Name _name, short _dclass, int _ttl, int length,
-	  DataByteInputStream in, Compression c) throws IOException
+	  DataByteInputStream in)
+throws IOException
 {
-	super(_name, Type.PTR, _dclass, _ttl, length, in, c);
+	super(_name, Type.PTR, _dclass, _ttl, length, in);
 }
 
 PTRRecord(Name _name, short _dclass, int _ttl, MyStringTokenizer st,
