@@ -59,12 +59,12 @@ TSIGRecord(Name _name, short _dclass, int _ttl, Name _alg,
 }
 
 TSIGRecord(Name _name, short _dclass, int _ttl, int length,
-	   DataByteInputStream in, Compression c) throws IOException
+	   DataByteInputStream in) throws IOException
 {
 	super(_name, Type.TSIG, _dclass, _ttl);
 	if (in == null)
 		return;
-	alg = new Name(in, c);
+	alg = new Name(in);
 
 	short timeHigh = in.readShort();
 	int timeLow = in.readInt();
